<resources>
    <string name="app_name">The Handbook</string>
    <string name="title_activity_add_category">AddCategory</string>
    <string name="save">Save</string>
    <string name="title_list_of_sops">List of SOPs</string>
    <string name="title_list_of_steps">List of Steps</string>
    <string name="edit_step">Edit Step</string>
    <string name="delete_step">Delete Step</string>
    <string name="sign_in">Sign in</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="show_pages_on_widget">Show pages on Widget</string>
    <string name="no_handbooks_bookmarked">No Handbooks bookmarked</string>
    <string name="create_a_new_handbook">Create a new Handbook</string>
    <string name="handbook_title">Handbook Title</string>
    <string name="color_of_book">Color of book</string>
    <string name="add_step">add step</string>
    <string name="save_sop">save book</string>
    <string name="firebase">FireBase</string>
    <string name="create_a_unique_username_must_be_one_word">Create a unique username. Must be one word.</string>
    <string name="user_name">User Name</string>
    <string name="create_user_name">Create User name</string>
    <string name="shared_by">Shared BY:</string>
    <string name="no_handbook_selected_to_display">No Handbook selected to display.</string>
    <string name="create_a_book_shelf">Create a book shelf</string>
    <string name="book_shelf_name">Book Shelf Name</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="step_title">Page Title</string>
    <string name="add_image">Add Image</string>
    <string name="add_description_of_step">Add description for page</string>
    <string name="complete_sop">Complete Book</string>
    <string name="add_another_step">add another page</string>
    <string name="save_step">Save page</string>
    <string name="search_users">Search Users</string>
    <string name="search">search</string>
    <string name="sharedbooks">No shared Handbooks</string>
    <string name="add_book_to_shelf">Add a Handbook to \</string>
    <string name="no_dexcrip">No Description</string>
    <string name="edit_shelfName">Edit the shelf name</string>
    <string name="book_info">Edit Book info</string>
    <string name="sdcard">/sdcard/</string>
    <string name="no_shelfs">No Shelfs</string>
    <string name="red_book">Red Book</string>
    <string name="green_book">green Book</string>
    <string name="blue_book">blue book</string>
    <string name="orange_book">orange book</string>
    <string name="yellow_book">yellow book</string>
    <string name="page_attachments">page attachments</string>
    <string name="handbook">handbook</string>
    <string name="bookmark">bookmark</string>
    <string name="book_options">book options</string>
    <string name="book_shared">book shared</string>
    <string name="page_options">page options</string>
    <string name="page_image">page image</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="picture_preview">picture preview</string>
    <string name="shelf_image">shelf image</string>
    <string name="shelf_options">shelf options</string>
    <string name="shelf_share">shelf share</string>
    <string name="add_book_shelf">Add Book Shelf</string>
    <string name="add_handbook">Add Handbook</string>
    <string name="add_page">Add Page</string>
    <string name="sent_to">\ sent to \</string>
    <string name="no_user">No user by that name.</string>
    <string name="sop">sop</string>
    <string name="signin">signIn</string>
    <string name="mysop">mysop</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="sharedbooks1">Shared Books</string>
    <string name="bookmarkpass">JonNyBgOoDeMARKED</string>
    <string name="sharedpass">JonNyBgOoDeSHARED</string>
    <string name="new_bookshelf">Create a book shelf   to keep your handbooks organized</string>
    <string name="sharedbook">Shared Book</string>
    <string name="bookfrom">Handbook from /</string>
    <string name="receive">would you like to receive /</string>
    <string name="not_accepted">Item not accepted</string>
    <string name="sharedbooks2">Shared Books</string>
    <string name="sharedstatus">sharedStatus</string>
    <string name="category">category</string>
    <string name="shelftitle">shelfTitle</string>
    <string name="id">id</string>
    <string name="editshelf">Edit Shelf</string>
    <string name="catexsits">This category already exists</string>
    <string name="newcat">Please enter a category name</string>
    <string name="sharedBy">/ was shared by</string>
    <string name="d">id</string>
    <string name="edit1">edit</string>
    <string name="deleteentry">Delete entry</string>
    <string name="rusuredelete">Are you sure you want to delete \</string>
    <string name="questionmark">\?</string>
    <string name="isdeleted">/ is Deleted</string>
    <string name="deleted">Deleted</string>
    <string name="steps">steps</string>
    <string name="usernameset">User nickname is set!</string>
    <string name="user">Users</string>
    <string name="username">userName</string>
    <string name="alreadysignedin">Already Signed In as</string>
    <string name="signedin">Signed in!</string>
    <string name="signincanceled">Sign in canceled</string>
    <string name="differentname">Choose a different user name</string>
    <string name="email">email</string>
    <string name="userupdated">User name updated</string>
    <string name="nospaces">No spaces allowed</string>
    <string name="users">Users</string>
    <string name="pagephoto">page_photo</string>
    <string name="usernameis">User name is \</string>
    <string name="editbook">editSop</string>
    <string name="booktitle">sopTitle</string>
    <string name="bookshelf">sopCategory</string>
    <string name="bookcolor">bookColor</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="wasselected">/ was selected</string>
    <string name="editbooktitle">editSopTitle</string>
    <string name="editid">editId</string>
    <string name="bookexsits">This SOP already exists in</string>
    <string name="shelf">category</string>
    <string name="bookname">Please enter a SOP name</string>
    <string name="handbook1">\ Handbooks</string>
    <string name="unbookmarked">Un-Bookmarked</string>
    <string name="editbookid">editId</string>
    <string name="deletedentry">Delete entry</string>
    <string name="quesionmark">\?</string>
    <string name="shelftitle1">sopCategory</string>
    <string name="pagenum">stepNumber</string>
    <string name="addpage">Add Page</string>
    <string name="editpage">Edit Page</string>
    <string name="editssaved">Edits were saved</string>
    <string name="entertitle">Please enter a title for the page</string>
    <string name="stepsspace">Page \</string>
    <string name="editpage1">editStep</string>
    <string name="pagetitle">stepTitle</string>
    <string name="pagedescrip">stepDescription</string>
    <string name="pagepic">editImage</string>
    <string name="image">image/*</string>
    <string name="permisdenied">Permission denied to read your External storage</string>
    <string name="jpg">.jpg</string>
    <string name="premisden">Permission denied to</string>
    <string name="widgetpage">Pages added to widget</string>
    <string name="pagehoto">page_photo</string>
    <string name="position">position</string>
    <string name="outof">\ out of \</string>
    <string name="spacestep">Page \</string>
    <string name="deletestep">Delete step</string>
    <string name="rusuredele">Are you sure you want to delete this step?</string>
    <string name="isdeletednow">is Deleted from book</string>
    <string name="handbookspace">Handbook</string>
    <string name="no_image">No Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collaborate">Collaborate</string>
    <string name="sign_out">Sign out</string>
    <string name="create_account">Create account</string>

</resources>
