<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/label"
        style="@style/ConstraintCenterHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebase"
        android:textSize="32sp"/>

    <TextView
        android:id="@+id/firebase_username_label"
        style="@style/ConstraintCenterHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/create_a_unique_username_must_be_one_word"
        app:layout_constraintTop_toBottomOf="@id/label"/>

    <EditText
        android:id="@+id/edittext_firebase_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/firebase_username_label" />


    <Button
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_user_name"
        app:layout_constraintTop_toBottomOf="@id/edittext_firebase_username"/>

</android.support.constraint.ConstraintLayout>